# blog

./: .env  .env.sample  README.md  pyproject.toml
comment/: admin.py  models.py  serializers.py  urls.py  views.py
comment/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
post/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
post/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
